--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,8 @@
     "express": "^5.2.1",
     "jsonwebtoken": "^9.0.3",
     "mongoose": "^9.1.0",
+    "axios": "^1.5.0",
+    "node-cron": "^3.0.2",
     "socket.io": "^4.8.3",
     "socket.io-client": "^4.8.3"
   },
